--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "PORT=4000 node scripts/start.js",
+    "start": "cross-env PORT=4000 node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -149,6 +149,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-flow-strip-types": "^7.13.0"
+    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
+    "cross-env": "^7.0.3"
   }
 }
